# WordGenerator

./: CMakeLists.txt  README.md
docs/: Doxyfile
include/: word_generator.h
src/: main.c  word_generator.c
tests/: test_word_generator.cpp
